--- a/tecnicofs-v2/Makefile
+++ b/tecnicofs-v2/Makefile
@@ -22,10 +22,11 @@ vpath # clears VPATH
 vpath %.h $(INCLUDE_DIRS)
 
 CFLAGS = -std=c11 -D_POSIX_C_SOURCE=200809L
+LDFLAGS = -pthread
 CFLAGS += $(INCLUDES)
 
 # Warnings
-CFLAGS += -fdiagnostics-color=always -Wall -Werror -Wextra -Wcast-align -Wconversion -Wfloat-equal -Wformat=2 -Wnull-dereference -Wshadow -Wsign-conversion -Wswitch-default -Wswitch-enum -Wundef -Wunreachable-code -Wunused -lpthread 
+CFLAGS += -fdiagnostics-color=always -Wall -Werror -Wextra -Wcast-align -Wconversion -Wfloat-equal -Wformat=2 -Wnull-dereference -Wshadow -Wsign-conversion -Wswitch-default -Wswitch-enum -Wundef -Wunreachable-code -Wunused  
 # Warning suppressions
 CFLAGS += -Wno-sign-compare
 
