Revert "Finished Project Part1"
This reverts commit f9ed29c2e017ebf3f4b1710dd6e601cef52685bd.

--- a/tecnicofs-v2/tests/additional-tests-reqs1 2/tecnicofs/Makefile
+++ b/tecnicofs-v2/tests/additional-tests-reqs1 2/tecnicofs/Makefile
@@ -1,39 +1,32 @@
 # Makefile, v1
 # Sistemas Operativos, DEI/IST/ULisboa 2021-22
-
+#
 # This makefile should be run from the *root* of the project
 
 CC ?= gcc
 LD ?= gcc
 
 # space separated list of directories with header files
-INCLUDE_DIRS := fs .
+INCLUDE_DIRS := ../../../fs .
 # this creates a space separated list of -I<dir> where <dir> is each of the values in INCLUDE_DIRS
 INCLUDES = $(addprefix -I, $(INCLUDE_DIRS))
 
-# $(info ${BRO}), prints the var BRO
-
 SOURCES  := $(wildcard */*.c)
-OURTESTS := $(wildcard tests/ourTests/*.c)
-SOURCES += ${OURTESTS}
 HEADERS  := $(wildcard */*.h)
 OBJECTS  := $(SOURCES:.c=.o)
-
-
-TARGET_EXECS := tests/test1  $(OURTESTS:.c=)  
+TARGET_EXECS := tests/test1 tests/copy_to_external_simple tests/copy_to_external_errors tests/write_10_blocks_spill tests/write_10_blocks_simple tests/write_more_than_10_blocks_simple
 
 # VPATH is a variable used by Makefile which finds *sources* and makes them available throughout the codebase
 # vpath %.h <DIR> tells make to look for header files in <DIR>
 vpath # clears VPATH
 vpath %.h $(INCLUDE_DIRS)
 
-
 CFLAGS = -std=c11 -D_POSIX_C_SOURCE=200809L
-LDFLAGS = -pthread
 CFLAGS += $(INCLUDES)
+LDFLAGS = -pthread
 
 # Warnings
-CFLAGS += -fdiagnostics-color=always -Wall -Werror -Wextra -Wcast-align -Wconversion -Wfloat-equal -Wformat=2 -Wnull-dereference -Wshadow -Wsign-conversion -Wswitch-default -Wswitch-enum -Wundef -Wunreachable-code -Wunused #-fsanitize=thread 
+CFLAGS += -fdiagnostics-color=always -Wall -Werror -Wextra -Wcast-align -Wconversion -Wfloat-equal -Wformat=2 -Wnull-dereference -Wshadow -Wsign-conversion -Wswitch-default -Wswitch-enum -Wundef -Wunreachable-code -Wunused
 # Warning suppressions
 CFLAGS += -Wno-sign-compare
 
@@ -48,7 +41,6 @@ ifeq ($(strip $(OPTIM)), no)
 else
   CFLAGS += -O3
 endif
-
 
 # A phony target is one that is not really the name of a file
 # https://www.gnu.org/software/make/manual/html_node/Phony-Targets.html
@@ -73,8 +65,13 @@ fmt: $(SOURCES) $(HEADERS)
 # Note the lack of a rule.
 # make uses a set of default rules, one of which compiles C binaries
 # the CC, LD, CFLAGS and LDFLAGS are used in this rule
-tests/test1: tests/test1.o fs/operations.o fs/state.o
-$(TARGET_EXECS): %: %.o fs/operations.o fs/state.o 
+tests/test1: tests/test1.o ../../../fs/operations.o ../../../fs/state.o
+tests/copy_to_external_errors: tests/copy_to_external_errors.o ../../../fs/operations.o ../../../fs/state.o
+tests/copy_to_external_simple: tests/copy_to_external_simple.o ../../../fs/operations.o ../../../fs/state.o
+tests/write_10_blocks_spill: tests/write_10_blocks_spill.o ../../../fs/operations.o ../../../fs/state.o
+tests/write_10_blocks_simple: tests/write_10_blocks_simple.o ../../../fs/operations.o ../../../fs/state.o
+tests/write_more_than_10_blocks_simple: tests/write_more_than_10_blocks_simple.o ../../../fs/operations.o ../../../fs/state.o
+
 
 clean:
 	rm -f $(OBJECTS) $(TARGET_EXECS)
